# CCJ

./: .gitignore  CMakeLists.txt  Dot.ps  README.generate_cmdlineparser  README.md  callgrind.out.2884339  callgrind.out.2888972  callgrind.out.2996215
Examples/: Cases.fa  Solutions.fa
Original_CCJ/: CCJ.cpp  CMakeLists.txt  h_globals.h
Sparse_CCJ/: CMakeLists.txt
conda_recipe/: README.md  build.sh  meta.yaml
simfold/src/common/: init.cpp
src/: CCJ.cc  W_final.cc  W_final.cpp  W_final.hh  base_types.hh  ccj.ggo  centroid.cc  cmdline.cc  cmdline.hh  common.cc  common.hh  config.h  constants.hh  dot_plot.cc  dot_plot.hh  h_externs.hh  h_globals.hh  h_struct.hh  index4D.hh  matrices.hh  matrices.txt  part_func.cc  part_func.hh  pf_externs.hh  pf_globals.hh  pseudo_loop.cc  pseudo_loop.cpp  pseudo_loop.hh  pseudo_loop_gen.cc  pseudo_loop_trace.cc  s_energy_matrix.cc  s_energy_matrix.cpp  s_energy_matrix.hh  stoch_backtrack.cc
src/Sparse_CCJ/: pseudo_loop.cpp
src/ViennaRNA/: pair_mat.hh
src/postscript/: dot_plot_base.hex  dot_plot_linear_data.hex  dot_plot_sc_motifs.hex  dot_plot_sd.hex  dot_plot_ud.hex
